# LinAl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ReadMe.md
.github/workflows/: build.yml  linux.yml  ubuntu.yml  windows.yml
benchmark/: Benchmark_HMat3dRotation.cpp  Benchmark_Mat3dRotation.cpp  Benchmark_Mat3fRotation.cpp  Benchmark_MatOperations.cpp  CMakeLists.txt
cmake/: Config.cmake.in  static_analysis.cmake
dependencies/: CMakeLists.txt
dependencies/core/: CMakeLists.txt
dependencies/linalbase/: CMakeLists.txt
include/LinAl/: LinearAlgebra.hpp
include/LinAl/BlazeWrapper/: Blaze.hpp  BlazeGlMatrix.hpp  BlazeGlMatrixOperations.hpp  BlazeGlVector.hpp  BlazeMatrixConversions.hpp  BlazeMatrixTransformations.hpp  BlazeVector.hpp  BlazeVectorOperations.hpp
src/: CMakeLists.txt
src/include/LinAl/: LinearAlgebra.hpp  LinearAlgebraUtil.hpp
src/include/LinAl/BlazeWrapper/: BlazeContainers.hpp  BlazeGlMatrix.hpp  BlazeGlMatrixOperations.hpp  BlazeGlVec.hpp  BlazeGlVector.hpp  BlazeHMat.hpp  BlazeHMatOperations.hpp  BlazeHMatrix.hpp  BlazeHMatrixOperations.hpp  BlazeHVec.hpp  BlazeHVecOperations.hpp  BlazeHVector.hpp  BlazeMat.hpp  BlazeMatOperations.hpp  BlazeMatrix.hpp  BlazeMatrixOperations.hpp  BlazeMatrixTransformations.hpp  BlazeUtil.hpp  BlazeVec.hpp  BlazeVec2.hpp  BlazeVec3.hpp  BlazeVec4.hpp  BlazeVecOperations.hpp  LinAlBlaze.hpp
src/include/LinAl/Utils/: Eps.hpp  Warnings.hpp
src/include/linal/: Containers.hpp  HMat.hpp  HMatOperations.hpp  HMatRotation.hpp  HMatTranslation.hpp  HVec.hpp  HVecOperations.hpp  Mat.hpp  MatOperations.hpp  MatRotation.hpp  Vec.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  VecOperations.hpp  array_type_traits.hpp  containers.hpp  hmat.hpp  hmat_rotation.hpp  hmat_transformations.hpp  hmat_translation.hpp  hvec.hpp  linal.hpp  mat.hpp  mat_operations.hpp  mat_rot.hpp  mat_transposed_type_trait.hpp  quat.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vec_compare.hpp  vec_operations.hpp
src/include/linal/policies/: addition_policy.hpp  comparison_policy.hpp  division_policy.hpp  element_access_policy.hpp  multiplication_policy.hpp  subtraction_policy.hpp  unary_policy.hpp
src/include/linal/utils/: Assert.hpp  Compiler.hpp  Constants.hpp  Eps.hpp  Util.hpp  Warnings.hpp  assert.hpp  compiler.hpp  eps.hpp  print_mat.hpp  radians.hpp  util.hpp  warnings.hpp
src/source/: BlazeGlMatrixOperations.cpp
tests/: CMakeLists.txt  Test_DotProduct.cpp  Test_HMatrixOperations.cpp  Test_LinAlUtils.cpp  Test_MatRot.cpp  Test_MatrixOperations.cpp  Test_Quat.cpp  Test_Radians.cpp  Test_Vec.cpp  Test_VecCompare.cpp  Test_VecOperations.cpp  testbasicgtest.cpp
tests/testBlaze/: CMakeLists.txt  testBasicBlaze.cpp
tests/testLinearAlgebra/: CMakeLists.txt  testmatrixoperations.cpp
